--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Todo App</title>
+	<title>Todo List 2022 with LocalStorage</title>
 	<!-- CSS Import -->
 	<link rel="stylesheet" href="index.css" />
 	<!-- End of CSS Import -->
@@ -20,7 +20,7 @@
 		<!-- Greeting -->
 		<section class="greeting">
 			<h2 class="title">
-				What's up, <input type="text" id="name" placeholder="Enter your name here" />
+				What's up, <input type="text" id="name" placeholder="Name here" />
 			</h2>
 		</section>
 		<!-- End of Greeting -->
@@ -32,16 +32,16 @@
 				<h4>What's on your todo?</h4>
 				<input 
 					type="text" 
-					placeholder="e.g. Get some milk"
+					placeholder="e.g. Submit the ten tasks"
 					name="content"
 					id="content" />
 				
 				<h4>Pick a category</h4>
 				<div class="options">
 					<label>
-						<input type="radio" name="category" id="category1" value="business" /> 
+						<input type="radio" name="category" id="category1" value="School" /> 
 						<span class="bubble business"></span>
-						<div>Business</div>
+						<div>School</div>
 					</label>
 					<label>
 						<input type="radio" name="category" id="category2" value="personal" />
