--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Todo List 2022 with LocalStorage</title>
+	<title>To Do App</title>
 	<!-- CSS Import -->
 	<link rel="stylesheet" href="index.css" />
 	<!-- End of CSS Import -->
@@ -50,11 +50,15 @@
 					</label>
 				</div>
 
-				<input type="submit" value="Add todo" />
+				<input type="submit" value="Add todo" /> <br>
+
+				<input type="submit" id="sorting"  value="sort items"/>
 			</form>
 		</section>
 		<!-- End of New Todo -->
 
+        <h1>sort by</h1>
+	
 		<!-- Todo List -->
 		<section class="todo-list">
 			<h3>TODO LIST</h3>
