--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <button id="addItem" >Add Item <i class="bi bi-plus-square"></i></button>
+                        <button id="addItem" class="btn-grad">Add the Items  <i class="bi bi-plus-square"></i></button>
                     </div>
     
                     <div class="col">
-                        <button id="sorting" >Sort your list <i class="bi bi-sort-alpha-down"></i></button>
+                        <button id="sorting" class="btn-grad" >Sort your list <i class="bi bi-sort-alpha-down"></i></button>
                     </div>
                 </div>
              
@@ -49,6 +49,6 @@
         </div>
         <!-- Bootstrap JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="./code.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
